// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text matches 'p' snapshot 1`] = `
<p
  className="text"
>
  This is text.
</p>
`;

exports[`Text matches 'span' snapshot 1`] = `
<span
  className="text"
>
  This is text.
</span>
`;

exports[`Text matches snapshot 1`] = `
<p
  className="text"
>
  This is text.
</p>
`;
